Add method to check if strong biometric authentication is available or not.
Hide or show setting for authentication based on the value.

Tested:
Tested on mobile.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="authentication_header">Authentication</string>
+    <string name="authentication_header_key">Authentication_key</string>
 
     <!-- Authentication Preferences -->
     <string name="biometric_title">Use Fingerprint</string>
