--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_activity_settings">SettingsActivity</string>
 
     <!--Button texts-->
+    <string name="settings_activity_title">Settings</string>
     <string name="setting_text">Settings</string>
 
     <!-- Preference Titles -->
