Create chat list view.
Tested:
Tested on Samsung S20FE.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <!-- Messages Preferences -->
     <string name="signature_title">Your signature</string>
     <string name="reply_title">Default reply action</string>
+    <string name="person_name">Person name</string>
 
     <!-- Sync Preferences -->
 </resources>
